--- a/src/main/resources/fronts/storer.fxml
+++ b/src/main/resources/fronts/storer.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+
 <?import com.jfoenix.controls.JFXTabPane?>
+
 <HBox id="vbox" maxHeight="-Infinity" maxWidth="Infinity" prefHeight="470.0" prefWidth="839.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StorerController">
     <children>
         <JFXTabPane maxHeight="-Infinity" maxWidth="Infinity" prefHeight="470.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
@@ -18,16 +25,16 @@
                                 <TableView fx:id="statementInvoiceTable" editable="true" layoutX="31.0" layoutY="47.0" prefHeight="343.0" prefWidth="778.0">
                                     <columns>
                                         <TableColumn fx:id="idInvoiceProductColumn" maxWidth="50.0" prefWidth="50.0" text="ID" />
-                                        <TableColumn fx:id="clientNameColumn" maxWidth="90.0" prefWidth="87.0" text="Имя клиента" />
-                                        <TableColumn fx:id="clientSurnameColumn" maxWidth="110.0" prefWidth="108.0" text="Фамилия клиента" />
-                                        <TableColumn fx:id="productNameColumn" maxWidth="100.0" prefWidth="94.0" text="Наименование продукта" />
-                                        <TableColumn fx:id="clientPhoneColumn" maxWidth="100.0" prefWidth="100.0" text="Телефон " />
-                                        <TableColumn fx:id="clientAdressColumn" maxWidth="200.0" minWidth="0.0" prefWidth="200.0" text="Адрес" />
-                                        <TableColumn fx:id="invoiceProductCountColumn" maxWidth="180.0" prefWidth="137.0" text="Количество продукта" />
-                                        <TableColumn fx:id="invoiceProductLoadedColumn"  prefWidth="91.0" text="Отгружено" />
+                                        <TableColumn fx:id="clientNameColumn" maxWidth="90.0" prefWidth="87.0" text="Имя" />
+                                        <TableColumn fx:id="clientSurnameColumn" maxWidth="110.0" prefWidth="108.0" text="Фамилия" />
+                                        <TableColumn fx:id="productNameColumn" maxWidth="109.0" prefWidth="107.0" text="Продукт" />
+                                        <TableColumn fx:id="clientPhoneColumn" maxWidth="100.0" prefWidth="81.0" text="Телефон" />
+                                        <TableColumn fx:id="clientAdressColumn" maxWidth="200.0" minWidth="0.0" prefWidth="198.0" text="Адрес" />
+                                        <TableColumn fx:id="invoiceProductCountColumn" maxWidth="223.0" prefWidth="75.0" text="Количество" />
+                                        <TableColumn fx:id="invoiceProductLoadedColumn" prefWidth="71.0" text="Отгружено" />
                                     </columns>
                                 </TableView>
-                                <Button layoutX="640.0" layoutY="402.0" mnemonicParsing="false" onMouseClicked="#onLoadedChangeClick" prefHeight="25.0" prefWidth="79.0" text="Сохранить" />
+                                <Button layoutX="730.0" layoutY="402.0" mnemonicParsing="false" onMouseClicked="#onLoadedChangeClick" prefHeight="25.0" prefWidth="79.0" text="Сохранить" />
                                 <Label id="login" fx:id="loginLabel1" layoutX="70.0" layoutY="16.0" text="Вы авторизваны как " />
                                 <TextField fx:id="statementInvoiceFilter" layoutX="519.0" layoutY="10.0" prefHeight="25.0" prefWidth="290.0" />
                                 <ImageView fitHeight="24.0" fitWidth="27.0" layoutX="484.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
